# glogNotes

./: README.md
demo/: CMakeLists.txt  main2.cc
demo/log/: log.h
demo/mylog/: TE20220922-151747.14074  test.INFO
gflagDemo/: CMakeLists.txt
gflagDemo/gg/: gg.cc  gg.h
gflagDemo/src/: main.cc
logDemo/: CMakeLists.txt  CMakeLists1.txt  main.cc  main2.cc
logDemo/mylog/: TE20221018-183756.21004  test.INFO
